--- a/todo_list/todo/templates/todo/register.html
+++ b/todo_list/todo/templates/todo/register.html
@@ -2,14 +2,22 @@
 
 {% block body %}
 
-<h1>Register</h1>
+    <div class="main login_body">
+        <h1 class="login_heading">Sign Up</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.username }}
+            {{ form.first_name }}
+            {{ form.last_name }}
+            {{ form.email }}
+            {{ form.password1 }}
+            {{ form.password2 }}
+            
+            <button class="login_button" type="submit">Sign Up</button>
+        </form>
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Register">
-</form>
-
-<p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+        <p class="donthaveacc">Already have an account?</p>
+        <a class="donthaveacc signup" style="margin-top: -2px;" href="{% url 'login' %}">Login Here</a>
+    </div>
 
 {% endblock %}
