--- a/todo_list/todo/templates/todo/register.html
+++ b/todo_list/todo/templates/todo/register.html
@@ -8,7 +8,7 @@
         <form method="post">
             {% csrf_token %}
             <div>
-                <input autofocus class="login_form" type="text" name="username" placeholder="Username" autofocus>
+                <input autofocus class="login_form" type="text" name="username" placeholder="Username">
             </div>
 
             <div>
