--- a/todo_list/todo/static/todo/styles.css
+++ b/todo_list/todo/static/todo/styles.css
@@ -1,13 +1,21 @@
 body {
     background-color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
-    
 }
 
 .main {
     margin-left: 350px;
     margin-right: 350px;
-    border: 1px dotted #ff06063d;
+}
+
+.popup {
+    margin-left: 450px;
+    margin-right: 450px;
+    align-items: center;
+    border: 1px solid;
+    border-radius: 10px;
+    border-color: #3737378c;
+    box-shadow: 2px 2px 2px rgba(28, 28, 28, 0.41);
 }
 
 .heading {
@@ -43,64 +51,75 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
-}
-
-.task > .task_body{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 15px;
-    margin-right: 15px;
-    position: relative;
     padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.task_body {
+    align-items: flex-start;
     font-size: 15px;
+    flex: 0 1 200px;
+    margin-left: -400px; /* Adjust this value to move it further left */
 }
 
 
-.task > .task_button_group {
+.task-complete-icon {
+    display: flex;
+    height: 20px;
+    width: 20px;
+    background-color: #70ff03;
+    border-radius: 50%;
+}
+
+.task-incomplete-icon {
+    display: flex;
+    height: 20px;
+    width: 20px;
+    background-color: #8c8c8c;
+    border-radius: 50%;
+}
+
+.task_button_group {
+    display: flex;
+    align-items: center;
     color: #eb8f3b;
+}
+
+.task_button_group a {
+    margin: 0 3px;
 }
 
 .task:hover {
     border: 1px solid #474747;
     border-radius: 5px;
-    border-color: #474747;
-
-    color: #ff1616;
 }
 
-.task > #task_title {
+.task_title {
     color: #000000;
     font-size: 20px;
-    margin-top: 4px;
-    margin-bottom: 4px;
+    margin: 4px 0;
     text-decoration: none;
 }
 
-.task > #task_description {
+.task_description {
     color: #292929d0;
-    margin-top: 4px;
-    margin-bottom: 4px;
+    margin: 4px 0;
 }
 
-.task > #task_datetime {
+.task_datetime {
     color: #5601ff;
-    margin-top: 4px;
-    margin-bottom: 4px;
+    margin: 4px 0;
 }
 
-.task > #task_button {
-    margin-left: 3px;
-    margin-right: 3px;
+.task_button {
+    margin: 0 3px;
+    border: none;
+    background: none;
 }
 
 .rightmost {
-    right:10px;
+    right: 10px;
     margin-top: 10px;
-}
-
-.task > .link:hover {
-    text-decoration: underline;
 }
 
 .username {
@@ -109,18 +128,14 @@ body {
     right: 10px;
     padding: 5px;
     background-color: #ffffff;
-    
     color: #272727;
     border-radius: 5px;
     border-width: 0px;
 }
+
 .username:hover {
     background-color: #ffb861;
     box-shadow: 2px 2px 2px rgba(28, 28, 28, 0.41);
-}
-
-.username:focus {
-    background-color: #d1964d;
 }
 
 #username_popup {
@@ -128,9 +143,8 @@ body {
     display: none;
     right: 10px;
     top: 50px;
-    
-    width:200px;
-    padding: 5px;;
+    width: 200px;
+    padding: 5px;
     color: #ffffffc0;
     background-color: #2d2d2dbe;
     border-radius: 5px;
@@ -141,14 +155,12 @@ body {
     right: 10px;
     top: 40px;
 }
- 
+
 .edit_button {
     position: absolute;
     right: 350px;
     padding: 5px;
 }
-
-
 
 .login_body {
     margin-top: 200px;
@@ -164,8 +176,7 @@ body {
     font-size: 15px;
     width: 250px;
     height: 25px;
-    margin: auto;
-    margin-top: 10px;
+    margin: 10px auto;
     display: flex;
     justify-content: center;
     border: 1px solid #3d3d3d;
@@ -182,8 +193,7 @@ body {
     font-size: 15px;
     width: 255px;
     height: 30px;
-    margin: auto;
-    margin-top: 10px;
+    margin: 10px auto;
     display: flex;
     justify-content: center;
     border: 1px solid #3d3d3d;
@@ -197,65 +207,14 @@ body {
 
 .donthaveacc {
     justify-content: center;
-    margin: auto;
+    margin: 10px auto;
     display: flex;
-    margin-top: 10px;
-    margin: auto;  /* Centering without flexbox */
-    margin-top: 10px;
 }
 
 .signup {
     color: #373737;
-    
 }
 
 .signup:hover {
     color: #eb8f3b;
-}
-
-
-.datetimepicker {
-	display: inline-flex;
-	align-items: center;
-	background-color: #fff;
-	border: 4px solid darkturquoise;
-	border-radius: 8px;
-	
-	&:focus-within {
-		border-color: teal;
-	}
-	
-	input {
-		font: inherit;
-		color: inherit;
-		appearance: none;
-		outline: none;
-		border: 0;
-		background-color: transparent;
-		
-		&[type=date] {
-			width: 10rem;
-			padding: .25rem 0 .25rem .5rem;
-			border-right-width: 0;
-		}
-		
-		&[type=time] {
-			width: 5.5rem;
-			padding: .25rem .5rem .25rem 0;
-			border-left-width: 0;
-		}
-	}
-	
-	span {
-		height: 1rem;
-		margin-right: .25rem;
-		margin-left: .25rem;
-		border-right: 1px solid #ddd;
-	}
-}
-
-.info {
-	padding-top: .5rem;
-	font-size: .8rem;
-	color: rgba(255, 255, 255, .5);
 }
