--- a/todo_list/todo/templates/todo/tasks_confirm_delete.html
+++ b/todo_list/todo/templates/todo/tasks_confirm_delete.html
@@ -1,14 +1,23 @@
 {% extends "todo/layout.html" %}
 
 {% block body %}
-<a href="{% url 'tasks' %}">cancel task</a>
-<h1>Delete Task</h1>
 
-<form method="POST">
-    {% csrf_token %}
-    <p>Are you sure you want to delete this task? "{{ task }}"</p>
-    <input type="submit" value="Delete">
-</form>
+
+<div class="popup">
+    <h1 style="text-align: center;">Delete Task</h1>
+
+    <form method="POST">
+        {% csrf_token %}
+        <p style="text-align: center;">Are you sure you want to delete this task? "{{ task }}"</p>
+        <div class="button">
+            <div style="align-items: center; margin-left: 250px; margin-right: 200px; margin-bottom: 10px;">
+                <input class="button" type="submit" value="Delete">
+                <a href="{% url 'tasks' %}"><button class="button">Cancel</button></a>
+            </div>
+        </div>
+
+    </form>
+</div>
 
 
 {% endblock %}
