--- a/todo_list/todo/templates/todo/tasks_form.html
+++ b/todo_list/todo/templates/todo/tasks_form.html
@@ -35,10 +35,11 @@
         </div>
 
         <div>
+            <a class="login_button" style="text-decoration: none;" href="{% url 'tasks' %}">cancel</a>
             <input class="login_button" type="submit" value="Submit">
-            <a class="login_button" style="text-decoration: none;" href="{% url 'tasks' %}">cancel task</a>
         </div>
     </form>
 </div>
+
 
 {% endblock %}
