--- a/todo_list/todo/templates/todo/layout.html
+++ b/todo_list/todo/templates/todo/layout.html
@@ -30,15 +30,15 @@
             }
 
                 const task = document.querySelector('#task');
-                const buttons = document.querySelector(".task_button_group");
+                const buttons = document.querySelector("#task_button_group");
 
                 task.addEventListener('mouseover', () => {
-                    buttons.style.color = 'black';
-                })
+                    buttons.style.color = '#ffffff';
+                });
 
                 task.addEventListener('mouseout', () => {
-                    buttons.style.color = 'white';
-                })
+                    buttons.style.color = '#70ff03';
+                });
 
             });
 
