--- a/todo_list/todo/static/todo/styles.css
+++ b/todo_list/todo/static/todo/styles.css
@@ -48,14 +48,20 @@ body {
 
 .task {
     color: #373737;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+
     align-items: center;
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 5px;
 
     border-bottom: 0.5px solid #bcbcbcc1;
+}
+
+.item {
+    margin: 5px;
+    padding: 10px;
 }
 
 .task:hover {
@@ -65,61 +71,58 @@ body {
     border-bottom: none;
 }
 
-.task_title {
+.task_body {
+    font-size: 15px;
+    margin-left: -100px;
+}
+
+.task_body > .task_title {
     color: #000000;
     font-size: 20px;
     margin: 4px 0;
     text-decoration: none;
 }
 
-.task_description {
+.task_body > .task_description {
     color: #292929d0;
     margin: 4px 0;
 }
 
-.task_datetime {
+.task_body > .task_datetime {
     color: #5601ff;
     margin: 4px 0;
 }
 
 .task_button {
-    margin: 0 3px;
+    margin: 3px;
     border: none;
     background: none;
 }
 
-.task_body {
-    align-items: flex-start;
-    font-size: 15px;
-    flex: 0 1 200px;
-    margin-left: -400px; /* Adjust this value to move it further left */
+#task_button_group {
+    display: flex;
+    margin: 5px;
+    align-items: center;
 }
 
 
 .task-complete-icon {
-    display: flex;
-    height: 20px;
-    width: 20px;
+    height: 10px;
+    width: 10px;
     background-color: #70ff03;
     border-radius: 50%;
+    margin-right: 10px;
 }
 
 .task-incomplete-icon {
-    display: flex;
-    height: 20px;
-    width: 20px;
+    height: 5px;
+    width: 5px;
     background-color: #8c8c8c;
     border-radius: 50%;
+    margin-right: 10px; 
 }
 
-#task_button_group {
-    display: flex;
-    align-items: center;
-}
 
-#task_button_group a {
-    margin: 0 3px;
-}
 
 
 .username {
@@ -172,30 +175,26 @@ body {
     margin-bottom: 10px;
 }
 
-.login_form {
-    font-size: 15px;
-    width: 250px;
-    height: 25px;
-    margin: 10px auto;
-    display: flex;
-    justify-content: center;
-    border: 1px solid #3d3d3d;
-    border-radius: 5px;
-}
-
-.login_form:focus {
-    border: 1px solid #ff1616;
+.task_form {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 50px;
+    margin-right: 20px;
+    align-items: normal;
 }
 
 .login_button {
     background-color: #474747;
     color: #ffffff;
     font-size: 15px;
-    width: 255px;
+
+    width: 200px;
     height: 30px;
     margin: 10px auto;
+
     display: flex;
     justify-content: center;
+    align-items: center;
     border: 1px solid #3d3d3d;
     border-radius: 5px;
 }
