--- a/todo_list/todo/templates/todo/tasks_form.html
+++ b/todo_list/todo/templates/todo/tasks_form.html
@@ -2,15 +2,6 @@
 
 {% block body %}
 
-<style>
-    .task_form {
-        margin-top: 5px;
-        margin-bottom: 5px;
-        margin-left: 50px;
-        margin-right: 20px;
-        align-items: normal;
-    }
-</style>
 
 <div class="popup">
     <h1 style="text-align: center;">Task Form</h1>
@@ -35,7 +26,7 @@
         </div>
 
         <div>
-            <a class="login_button" style="text-decoration: none;" href="{% url 'tasks' %}">cancel</a>
+            <a class="login_button" style="text-decoration: none;" href="{% url 'tasks' %}">Cancel</a>
             <input class="login_button" type="submit" value="Submit">
         </div>
     </form>
