--- a/todo_list/todo/static/todo/styles.css
+++ b/todo_list/todo/static/todo/styles.css
@@ -107,16 +107,16 @@ body {
 
 
 .task-complete-icon {
-    height: 10px;
-    width: 10px;
+    height: 2px;
+    width: 2px;
     background-color: #70ff03;
     border-radius: 50%;
     margin-right: 10px;
 }
 
 .task-incomplete-icon {
-    height: 5px;
-    width: 5px;
+    height: 2px;
+    width: 2px;
     background-color: #8c8c8c;
     border-radius: 50%;
     margin-right: 10px; 
@@ -175,12 +175,15 @@ body {
     margin-bottom: 10px;
 }
 
-.task_form {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 50px;
-    margin-right: 20px;
-    align-items: normal;
+.login_form {
+    font-size: 15px;
+    width: 250px;
+    height: 25px;
+    margin: 10px auto;
+    display: flex;
+    justify-content: center;
+    border: 1px solid #3d3d3d;
+    border-radius: 5px;
 }
 
 .login_button {
@@ -197,6 +200,8 @@ body {
     align-items: center;
     border: 1px solid #3d3d3d;
     border-radius: 5px;
+
+    text-decoration: none;
 }
 
 .login_button:hover {
@@ -216,4 +221,33 @@ body {
 
 .signup:hover {
     color: #eb8f3b;
+}
+
+
+.form-control {
+    font-size: 15px;
+    width: 150px;
+    height: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    border: 1px solid #3d3d3d;
+    border-radius: 5px;
+    padding: 3px;
+}
+
+.form-check-input {
+    margin-left: 10px;
+}
+
+
+.task_form_label {
+    font-size: 15px;
+    display: flex;
+    margin-top: 10px;
+    text-align: center;
+    align-items: normal;
+    justify-content: center;
 }
