--- a/todo_list/todo/static/todo/styles.css
+++ b/todo_list/todo/static/todo/styles.css
@@ -49,7 +49,7 @@ body {
 .task {
     color: #373737;
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 0.2fr 1.8fr 1fr 1fr;
 
     align-items: center;
     padding: 10px;
@@ -62,6 +62,7 @@ body {
 .item {
     margin: 5px;
     padding: 10px;
+
 }
 
 .task:hover {
@@ -73,7 +74,6 @@ body {
 
 .task_body {
     font-size: 15px;
-    margin-left: -100px;
 }
 
 .task_body > .task_title {
